<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.renhanfei.mylocationmap.TraceRecordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/record_instruction"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/noticeView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/record_explanation"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/acc_data"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/accView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/acc_data"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/record_condition"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/recordConditionView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/record_notstart"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/recordTimeView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/record_time_not_start"
            android:textSize="16dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/x_plus_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="xPlusPressed"
                android:text="@string/x_plus" />

            <Button
                android:id="@+id/x_minus_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="xMinusPressed"
                android:text="@string/x_minus" />

            <Button
                android:id="@+id/y_plus_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="yPlusPressed"
                android:text="@string/y_plus" />

            <Button
                android:id="@+id/y_minus_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="yMinusPressed"
                android:text="@string/y_minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick_startRecord"
                android:text="@string/start_record_btn" />

            <Button
                android:id="@+id/stop_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick_stopRecord"
                android:text="@string/stop_record_btn"
                android:clickable="false"/>

        </LinearLayout>


        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick_showRecords"
            android:text="@string/show_records_btn" />
    </LinearLayout>

</LinearLayout>
