<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_current_location"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.renhanfei.mylocationmap.CurrentLocationActivity">

    <TextView
        android:id="@+id/geoInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geo_info"
        android:textSize="17dp"
        android:paddingBottom="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/e_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="eastPressed"
            android:text="@string/e_button" />

        <Button
            android:id="@+id/s_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="southPressed"
            android:text="@string/s_button" />

        <Button
            android:id="@+id/w_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="westPressed"
            android:text="@string/w_button" />

        <Button
            android:id="@+id/n_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="northPressed"
            android:text="@string/n_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/record_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick_Record"
            android:text="@string/record_button" />

        <Button
            android:id="@+id/record_show_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick_ShowRecords"
            android:text="@string/show_records" />

    </LinearLayout>


</LinearLayout>
