<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context="com.example.renhanfei.mylocationmap.GPSMenuActivity">

    <Button
        android:id="@+id/got0_default_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goto_default_map"
        android:onClick="onClick_GoToDefaultMap"/>

    <Button
        android:id="@+id/goto_specified_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goto_specified_location"
        android:onClick="onClick_GoToSpecifiedLocationMap"/>

    <Button
        android:id="@+id/goto_current_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goto_current_location"
        android:onClick="onClick_GoToCurrentLocation"/>

    <Button
        android:id="@+id/goto_records_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goto_records_history"
        android:onClick="onClick_GoToRecordsHistory"/>

</LinearLayout>
